--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^20.3.3",
     "@types/uuid": "^9.0.2",
     "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.2"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vite": "^4.3.9"
   }
 }
