--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "license": "MIT",
   "scripts": {
     "test:all": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.3.3",
     "@types/uuid": "^9.0.2",
+    "eslint": "^8.44.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.2"
