--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint src --ext .ts --fix"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^20.3.3",
     "@types/uuid": "^9.0.2",
